k8s-deployment/service.yaml
# -------------------------------
# Service
# -------------------------------
apiVersion: v1
kind: Service
metadata:
  name: sohamrepo-chatbot-service
  namespace: "2401023-chatbot"
spec:
  selector:
    app: sohamrepo-chatbot
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: ClusterIP
