k8s-deployment/ingress.yaml
# -------------------------------
# Ingress
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: "2401023-chatbot"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: chatbot.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-service
                port:
                  number: 8501
